# ddo-builder

./: .env.example  .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  deploy.yml
docs/: binary-reverse-engineering.md  dat-format.md  db-guidelines.md  ddowiki-api.md  game-files.md
public/data/: spells.json
scripts/: pyproject.toml
scripts/src/ddo_data/: __init__.py  cli.py  enums.py
scripts/src/ddo_data/dat_parser/: __init__.py  archive.py  compare.py  constants.py  decompress.py  effects.py  extract.py  fid_item_lookup.json  fid_lookups.py  identify.py  namemap.py  probe.py  registry.py  spells_correlate.py  spells_survey.py  strings.py  survey.py  tagged.py  validate.py
scripts/src/ddo_data/db/: __init__.py  schema.py  validate.py  writers.py
scripts/src/ddo_data/game_data/: __init__.py  classes.py  enhancements.py  enums.py  feats.py  items.py  races.py
scripts/src/ddo_data/icons/: __init__.py  extract.py
scripts/src/ddo_data/wiki/: __init__.py  client.py  crafting.py  crafting_missing.json  crafting_missing_items.json  crafting_seed_data.json  crafting_static.py  crafting_systems.py  parsers.py  scraper.py
scripts/tests/: conftest.py  test_cli.py  test_dat_parser.py  test_db.py  test_effects.py  test_game_data.py  test_identify.py  test_probe.py  test_registry.py  test_strings.py  test_validate.py  test_wiki_parsers.py  test_wiki_scraper.py
src/: index.css  main.tsx
src/app/: App.css  App.test.tsx  App.tsx  AppSidebar.tsx
src/components/: CollapsibleSection.tsx  Icons.tsx  (+2 more)
(+40 files in other folders)
