[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ddo-data"
version = "0.1.0"
description = "Data pipeline for DDO Build Planner - parses game files and scrapes wiki"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "requests>=2.28",
    "beautifulsoup4>=4.11",
    "Pillow>=9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
ddo-data = "ddo_data.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/ddo_data"]

[tool.pytest.ini_options]
testpaths = ["tests"]
